Add verification
