# docs/swagger.json
@@ -218,6 +218,26 @@
                 }
             }
         },
+        "/auth/validate/{id}": {
+            "get": {
+                "description": "Validates user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Validate User",
+                "responses": {
+                    "307": {
+                        "description": "Temporary Redirect"
+                    }
+                }
+            }
+        },
         "/auth/verify-reset-password": {
             "post": {
                 "description": "Validate Password Reset Token and Reset Password",
